update YTA hyperlinks

--- a/doc/yade-tech-archive.bib
+++ b/doc/yade-tech-archive.bib
@@ -3,6 +3,7 @@
   	title = {YADE 1D vertical VANS fluid resolution: Numerical resolution details},
   	journal = {Yade Technical Archive},
   	year={2018}
+    url = {https://yade-dem.org/publi/YadeTechnicalArchive/Yade1DFluidVANS_NumericalResolution.pdf}
 }
 
 @article{Maurin2018b,
@@ -10,6 +11,7 @@
   	title = {YADE 1D vertical VANS fluid resolution: Theoretical basis},
   	journal = {Yade Technical Archive},
   	year={2018}
+    url = {https://yade-dem.org/publi/YadeTechnicalArchive/Yade1DFluidVANS_TheoreticalBasis.pdf}
 }
 
 @article{Maurin2018c,
@@ -17,6 +19,7 @@
   	title = {YADE 1D vertical VANS fluid resolution: validations},
   	journal = {Yade Technical Archive},
   	year={2018}
+    url = {https://yade-dem.org/publi/YadeTechnicalArchive/Yade1DFluidVANS_Validations.pdf}
 }
 
 @article{Caulk2018,
