--- a/doc/yade-tech-archive.bib
+++ b/doc/yade-tech-archive.bib
@@ -2,7 +2,7 @@
   	author = {Maurin, R.},
   	title = {YADE 1D vertical VANS fluid resolution: Numerical resolution details},
   	journal = {Yade Technical Archive},
-  	year={2018}
+  	year={2018},
     url = {https://yade-dem.org/publi/YadeTechnicalArchive/Yade1DFluidVANS_NumericalResolution.pdf}
 }
 
@@ -10,7 +10,7 @@
   	author = {Maurin, R.},
   	title = {YADE 1D vertical VANS fluid resolution: Theoretical basis},
   	journal = {Yade Technical Archive},
-  	year={2018}
+  	year={2018},
     url = {https://yade-dem.org/publi/YadeTechnicalArchive/Yade1DFluidVANS_TheoreticalBasis.pdf}
 }
 
@@ -18,7 +18,7 @@
   	author = {Maurin, R.},
   	title = {YADE 1D vertical VANS fluid resolution: validations},
   	journal = {Yade Technical Archive},
-  	year={2018}
+  	year={2018},
     url = {https://yade-dem.org/publi/YadeTechnicalArchive/Yade1DFluidVANS_Validations.pdf}
 }
 
