Added missing references to my articles using yade. Also my first Quantum Mechanics paper ;)

--- a/doc/yade-articles.bib
+++ b/doc/yade-articles.bib
@@ -563,8 +563,8 @@ author = "Markus Gusenbauer and Thomas Schrefl",
 }
 
 @article{Haustein2017,
-  title = "Discrete element modeling of deformable particles in \{YADE\} ",
-  journal = "SoftwareX ",
+  title = {{Discrete element modeling of deformable particles in YADE}},
+  journal = "SoftwareX",
   volume = "6",
   number = "",
   pages = "118 - 123",
@@ -596,6 +596,17 @@ author = "Markus Gusenbauer and Thomas Schrefl",
 	publisher = {American Physical Society},
 	doi = {10.1103/PhysRevE.88.062203},
 	url = {http://link.aps.org/doi/10.1103/PhysRevE.88.062203}
+}
+
+@article{Jasik2018,
+	title={{Electronic structure and rovibrational predissociation of the 2¹Π state in KLi}},
+	author={P. Jasik, J. Kozicki, T. Kilich, J.E. Sienkiewicz, N. E. Henriksen},
+	journal={Physical Chemistry Chemical Physics},
+	year={2018},
+	volume={20},
+	pages={18663--18670},
+	url={https://arxiv.org/abs/1804.08009},
+	doi={10.1039/c8cp02551g},
 }
 
 @article{Jerier2009,
@@ -661,7 +672,7 @@ author = "Markus Gusenbauer and Thomas Schrefl",
 }
 
 @article{Kozicki2009,
-	title={YADE-OPEN DEM: an open-source software using a discrete element method to simulate granular material},
+	title={{YADE-OPEN DEM: an open-source software using a discrete element method to simulate granular material}},
 	author={Kozicki, J. and Donzé, F.V.},
 	journal={Engineering Computations},
 	year={2009},
@@ -672,16 +683,76 @@ author = "Markus Gusenbauer and Thomas Schrefl",
 	doi={10.1108/02644400910985170},
 }
 
-@article{kozicki2014,
-  title={Discrete simulations of a triaxial compression test for sand by DEM},
-  author={Kozicki, Jan and Tejchman, Jacek and Mühlhaus, Hans-Bernd},
+@article{Widulinski2011,
+	title={Discrete simulations of shear zone patterning in sand in earth pressure problems of a retaining wall.},
+	author={Ł. Widuliński, J. Kozicki, J. Tejchman, D. Leśniewska},
+	journal={International Journal of Solids and Structures},
+	year={2011},
+	volume={48},
+	number={7},
+	pages={1191--1209},
+	url={http://www.sciencedirect.com/science/article/pii/S002076831100014X},
+	doi={10.1016/j.ijsolstr.2011.01.005},
+}
+
+@article{Kozicki2012,
+	title={{Effect of grain roughness on strength, volume changes, elastic and dissipated energies during quasi-static homogeneous triaxial compression using DEM.}},
+	author={J. Kozicki, J. Tejchman, Z. Mróz},
+	journal={Granular Matter},
+	year={2012},
+	volume={14},
+	number={4},
+	pages={457--468},
+	url={https://doi.org/10.1007/s10035-012-0352-1},
+	doi={10.1007/s10035-012-0352-1},
+}
+
+@article{Kozicki2014,
+  title={{Discrete simulations of a triaxial compression test for sand by DEM}},
+  author={Kozicki, J. and Tejchman, Jacek and Mühlhaus, Hans-Bernd},
   journal={International Journal for Numerical and Analytical Methods in Geomechanics},
   volume={38},
   number={18},
   pages={1923--1952},
   year={2014},
-  publisher={Wiley Online Library}
+  publisher={Wiley Online Library},
+  doi={10.1002/nag.2285},
 }
+
+
+@article{Kozicki2016,
+	title={{DEM investigations of two-dimensional granular vortex- and anti-vortex structures during plane strain compression.}},
+	author={Kozicki, J. and Tejchman, J.},
+	journal={Granular Matter},
+	year={2016},
+	volume={18},
+	doi={10.1007/s10035-016-0627-z},
+}
+
+@article{Kozicki2017,
+	title={{Investigations of quasi-static vortex structures in 2D sand specimen under passive earth pressure conditions based on DEM and Helmholtz-Hodge vector field decomposition}},
+	author={Kozicki, J. and Tejchman, J.},
+	journal={Granular Matter},
+	year={2017},
+	volume={19},
+	number={2},
+	pages={31},
+	url={https://doi.org/10.1007/s10035-017-0714-9},
+	doi={10.1007/s10035-017-0714-9},
+}
+
+@article{Kozicki2018,
+	title={{Relationship between vortex structures and shear localization in 3D granular specimens based on combined DEM and Helmholtz-Hodge decomposition}},
+	author={Kozicki, J. and Tejchman, J.},
+	journal={Granular Matter},
+	year={2018},
+	volume={20},
+	number={3},
+	pages={48},
+	url={https://doi.org/10.1007/s10035-018-0815-0},
+	doi={10.1007/s10035-018-0815-0},
+}
+
 
 @article{Kunhappan2017,
   title={Numerical modeling of high aspect ratio flexible fibers in inertial flows},
@@ -809,6 +880,15 @@ author = "Markus Gusenbauer and Thomas Schrefl",
   url = {http://link.aps.org/doi/10.1103/PhysRevE.94.052905}
 }
 
+@article{Niedostatkiewicz2013,
+	title={{Discrete modelling results of a direct shear test for granular materials versus FE results.}},
+	author={M. Niedostatkiewicz, J. Kozicki, J. Tejchman, H.B. Mühlhaus},
+	journal={Granular Matter},
+	year={2013},
+	volume={15},
+	doi={10.1007/s10035-013-0423-y},
+}
+
 @Article{Nicot2011,
   	author = {Nicot, F. and Hadda, N. and Bourrier, F. and Sibille, L. and Darve, F.},
   	title = {Failure mechanisms in granular media: a discrete element analysis},
@@ -847,7 +927,7 @@ author = "Markus Gusenbauer and Thomas Schrefl",
 	author = {Nicot, F. and Hadda, N. and Guessasma, M. and Fortin, J. and Millet, O.}
 }
 
-@article{Nitka2015,
+@article{Nitka2015a,
   title={Modelling of concrete behaviour in uniaxial compression and tension with DEM},
   author={Nitka, M. and Tejchman, J.},
   journal={Granular Matter},
@@ -855,6 +935,16 @@ author = "Markus Gusenbauer and Thomas Schrefl",
   year={2015},
   publisher={Springer}
 }
+
+@article{Nitka2015b,
+	title={{DEM analysis of micro-structural events within granular shear zones under passive earth pressure conditions.}},
+	author={M. Nitka, J. Tejchman, J. Kozicki, D. Leśniewska},
+	journal={Granular Matter},
+	year={2015},
+	volume={17},
+	doi={10.1007/s10035-015-0558-0},
+}
+
 
 
 @article{Papachristos2017,
