--- a/doc/yade-conferences.bib
+++ b/doc/yade-conferences.bib
@@ -730,7 +730,7 @@
   	year={2011}
 }
 
-@InProceedings{Nitka2015b,
+@InProceedings{Nitka2015c,
   title={Discrete Modelling of Micro-structural Phenomena in Granular Shear Zones},
   author={Nitka, Michal and Tejchman, Jacek and Kozicki, Jan},
   booktitle={Bifurcation and Degradation of Geomaterials in the New Millennium},
@@ -750,7 +750,7 @@
 
 @InProceedings{Skarzynski2014,
   title={Two-scale model for concrete beams subjected to three point bending—numerical analyses and experiments},
-  author={Skarzynski, M Nitka and Tejchman, J},
+  author={Ł. Skarżynski, M. Nitka, J. Tejchman},
   booktitle={Computational Modelling of Concrete Structures},
   volume={1},
   pages={149},
